--- a/solupoint/solupoint.csproj
+++ b/solupoint/solupoint.csproj
@@ -135,6 +135,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CartController.cs" />
+    <Compile Include="Controllers\PrivacyPolicyController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Data\JsonDatabase.cs" />
     <Compile Include="Global.asax.cs">
@@ -202,7 +203,7 @@
     <Content Include="Views\Pagamenti\Pagamenti.cshtml" />
     <Content Include="Views\Account\Pagamenti.cshtml" />
     <Content Include="Views\Home\MenuView.cshtml" />
-    <Content Include="Views\Home\PrivacyPolicyView.cshtml" />
+    <Content Include="Views\PrivacyPolicy\PrivacyPolicy.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
