--- a/solupoint/Views/Web.config
+++ b/solupoint/Views/Web.config
@@ -40,4 +40,17 @@
       </assemblies>
     </compilation>
   </system.web>
+
+	<system.net>
+		<mailSettings>
+			<smtp from="info@solupoint.com">
+				<network host="smtp.aruba.it"
+						 port="587"
+						 userName="info@solupoint.com"
+						 password="Cashpoint123!!"
+						 enableSsl="true" />
+			</smtp>
+		</mailSettings>
+	</system.net>
+
 </configuration>
