--- a/solupoint/solupoint.csproj
+++ b/solupoint/solupoint.csproj
@@ -172,6 +172,7 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Content\files\CashPoint.zip" />
+    <Content Include="Content\files\CashPoint.apk" />
     <None Include="Scripts\jquery-3.7.0.intellisense.js" />
     <Content Include="Scripts\jquery-3.7.0.js" />
     <Content Include="Scripts\jquery-3.7.0.min.js" />
